// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly renders with player 1`] = `
<Fragment>
  <WithPlayer
    closePlayer={[MockFunction]}
    film={
      Object {
        "backgroundColor": "#795433",
        "backgroundImage": "https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg",
        "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
        "director": "Quentin Tarantino",
        "genre": "Crime",
        "id": 1,
        "isFavorite": false,
        "name": "Pulp Fiction",
        "posterImage": "https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg",
        "previewImage": "https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg",
        "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
        "rating": 8.9,
        "released": 1994,
        "runTime": 153,
        "scoresCount": 1635992,
        "starring": Array [
          "John Travolta",
          "Uma Thurman",
          "Samuel L. Jackson",
        ],
        "videoLink": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
      }
    }
  />
  <section
    className="movie-card"
  >
    <BackgroundImage
      image="https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg"
      name="Pulp Fiction"
    />
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <div />
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <MoviePoster
          image="https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg"
          isBig={false}
          name="Pulp Fiction"
        />
        <div
          className="movie-card__desc"
        >
          <MovieMeta
            film={
              Object {
                "backgroundColor": "#795433",
                "backgroundImage": "https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg",
                "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
                "director": "Quentin Tarantino",
                "genre": "Crime",
                "id": 1,
                "isFavorite": false,
                "name": "Pulp Fiction",
                "posterImage": "https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg",
                "previewImage": "https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg",
                "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
                "rating": 8.9,
                "released": 1994,
                "runTime": 153,
                "scoresCount": 1635992,
                "starring": Array [
                  "John Travolta",
                  "Uma Thurman",
                  "Samuel L. Jackson",
                ],
                "videoLink": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              }
            }
          />
          <CardButtons
            film={
              Object {
                "backgroundColor": "#795433",
                "backgroundImage": "https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg",
                "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
                "director": "Quentin Tarantino",
                "genre": "Crime",
                "id": 1,
                "isFavorite": false,
                "name": "Pulp Fiction",
                "posterImage": "https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg",
                "previewImage": "https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg",
                "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
                "rating": 8.9,
                "released": 1994,
                "runTime": 153,
                "scoresCount": 1635992,
                "starring": Array [
                  "John Travolta",
                  "Uma Thurman",
                  "Samuel L. Jackson",
                ],
                "videoLink": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              }
            }
            isFull={false}
            onFavoritesToggle={[Function]}
            onPlayButtonClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</Fragment>
`;

exports[`renders correctly renders without player 1`] = `
<Fragment>
  <section
    className="movie-card"
  >
    <BackgroundImage
      image="https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg"
      name="Pulp Fiction"
    />
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <div />
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <MoviePoster
          image="https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg"
          isBig={false}
          name="Pulp Fiction"
        />
        <div
          className="movie-card__desc"
        >
          <MovieMeta
            film={
              Object {
                "backgroundColor": "#795433",
                "backgroundImage": "https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg",
                "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
                "director": "Quentin Tarantino",
                "genre": "Crime",
                "id": 1,
                "isFavorite": false,
                "name": "Pulp Fiction",
                "posterImage": "https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg",
                "previewImage": "https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg",
                "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
                "rating": 8.9,
                "released": 1994,
                "runTime": 153,
                "scoresCount": 1635992,
                "starring": Array [
                  "John Travolta",
                  "Uma Thurman",
                  "Samuel L. Jackson",
                ],
                "videoLink": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              }
            }
          />
          <CardButtons
            film={
              Object {
                "backgroundColor": "#795433",
                "backgroundImage": "https://es31-server.appspot.com/wtw/static/film/background/Pulp_Fiction.jpg",
                "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
                "director": "Quentin Tarantino",
                "genre": "Crime",
                "id": 1,
                "isFavorite": false,
                "name": "Pulp Fiction",
                "posterImage": "https://es31-server.appspot.com/wtw/static/film/poster/Pulp_Fiction.jpg",
                "previewImage": "https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg",
                "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
                "rating": 8.9,
                "released": 1994,
                "runTime": 153,
                "scoresCount": 1635992,
                "starring": Array [
                  "John Travolta",
                  "Uma Thurman",
                  "Samuel L. Jackson",
                ],
                "videoLink": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              }
            }
            isFull={false}
            onFavoritesToggle={[Function]}
            onPlayButtonClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</Fragment>
`;
